<?xml version="1.0"?>
<package format="3">
  <name>unitree_joint_controller</name>
  <version>0.1.0</version>
  <description>controller for unitree m8010-6 motor</description>
  <maintainer email="postrantor@gmail.com">trantor</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>

  <depend>backward_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>rcpputils</depend>
  <depend>unitree_sdk</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>unitree_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
