<?xml version="1.0"?>
<package format="2">
    <name>unitree_legged_control</name>
    <version>0.1.0</version>
    <description>The unitree_legged_control package for ros2</description>
    <maintainer email="postrantor@gmail.com">postrantor</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>joint_state_publisher</depend>
    <depend>robot_state_publisher</depend>
    <depend>unitree_legged_msgs</depend>
    <depend>urdf</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <controller_interface plugin="${prefix}/unitree_controller_plugins.xml"/>
    </export>
</package>
