<?xml version="1.0"?>
<package format="2">
    <name>unitree_legged_control</name>
    <version>0.1.0</version>
    <description>The unitree_legged_control package for ros2</description>
    <maintainer email="postrantor@gmail.com">postrantor</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>backward_ros</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>controller_interface</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>rcpputils</depend>
    <depend>urdf</depend>
    <depend>geometry_msgs</depend>
    <depend>unitree_msgs</depend>

    <test_depend>ament_cmake_gmock</test_depend>
    <test_depend>controller_manager</test_depend>
    <test_depend>hardware_interface_testing</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
